Modify sanji.yml to include gems

--- a/lib/sanji.yml
+++ b/lib/sanji.yml
@@ -27,3 +27,13 @@ cookbooks:
 
     optional:
     - _admin_namespace
+
+    gems:
+      all:
+      - paperclip
+      - kaminari
+
+      "development,test":
+      - thin
+      - quiet_assets
+
