Fix Gemfile recipe: Insertion of gems and gem groups

--- a/lib/sanji.yml
+++ b/lib/sanji.yml
@@ -37,3 +37,6 @@ cookbooks:
       "development,test":
       - thin
       - quiet_assets
+
+      "development,staging,production":
+      - devise
