Use space to separate envs on gems

--- a/lib/sanji.yml
+++ b/lib/sanji.yml
@@ -34,9 +34,9 @@ cookbooks:
       - paperclip
       - kaminari
 
-      "development,test":
+      development test:
       - thin
       - quiet_assets
 
-      "development,staging,production":
+      development staging production:
       - devise
