Allow adding version to gems

--- a/lib/sanji.yml
+++ b/lib/sanji.yml
@@ -31,7 +31,7 @@ cookbooks:
 
     gems:
       global:
-      - paperclip
+      - 'paperclip, ~> 4.3'
       - kaminari
 
       development test:
