--- a/lib/sanji.yml
+++ b/lib/sanji.yml
@@ -3,15 +3,20 @@ cookbook: _standard
 cookbooks:
   basic:
     recipes:
-    - _gemfile
     - _postgresql
     - _figaro
     - _seedbank
     - _annotate
     - _haml
     - _frontend
-    - _readme
+    - _gemfile
     - _gemfile_cleanup
+    - _readme
+
+    gems:
+      development test:
+      - thin
+      - quiet_assets
 
   standard:
     include:
@@ -32,10 +37,3 @@ cookbooks:
       global:
       - 'paperclip, ~> 4.3'
       - kaminari
-
-      development test:
-      - thin
-      - quiet_assets
-
-      development staging production:
-      - devise
