Refactor sanji cookbook naming convention

--- a/lib/sanji.yml
+++ b/lib/sanji.yml
@@ -1,7 +1,7 @@
 cookbook: _standard
 
 cookbooks:
-  basic:
+  _basic:
     recipes:
     - _postgresql
     - _gemfile
@@ -18,7 +18,7 @@ cookbooks:
       - thin
       - quiet_assets
 
-  standard:
+  _standard:
     include:
     - _basic
 
